[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/TitleScreen/Logo.png" type="Texture" id=3]
[ext_resource path="res://Assets/TitleScreen/PlayButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/TitleScreen/PlayButtonHover.png" type="Texture" id=5]
[ext_resource path="res://Assets/TitleScreen/2.png" type="Texture" id=6]
[ext_resource path="res://Assets/TitleScreen/2_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/TitleScreen/3.png" type="Texture" id=8]
[ext_resource path="res://Assets/TitleScreen/3_pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/TitleScreen/4.png" type="Texture" id=10]
[ext_resource path="res://Assets/TitleScreen/4_pressed.png" type="Texture" id=11]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 400, 160 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 320.0
margin_right = 432.0
margin_bottom = 352.0
rect_scale = Vector2( 1.5, 1.5 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="NumPlayerButtons" type="HBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 256.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 352.0
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/separation = 48

[node name="2PlayerButton" type="TextureButton" parent="NumPlayerButtons"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="3PlayerButton" type="TextureButton" parent="NumPlayerButtons"]
margin_left = 80.0
margin_right = 112.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="4PlayerButton" type="TextureButton" parent="NumPlayerButtons"]
margin_left = 160.0
margin_right = 192.0
margin_bottom = 32.0
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="NumPlayerButtons/2PlayerButton" to="." method="_on_2PlayerButton_pressed"]
[connection signal="pressed" from="NumPlayerButtons/3PlayerButton" to="." method="_on_3PlayerButton_pressed"]
[connection signal="pressed" from="NumPlayerButtons/4PlayerButton" to="." method="_on_4PlayerButton_pressed"]
